Accept back and forward mouse button events

QtWebEngine engine seems to has its own binding for these buttons in the
mouse release event while Falkon mostly works with mousePress events.

This causes double action on the same button click.

BUG: 479550

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>